@@ -1,12 +1,6 @@
 DONE
 
 TODO
-    
-    Fix messages under high jitter.
-
-    -------------
-
-    Now fix the out of order issues with blocks.
 
     -------------
 
